deployment.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: "srm-dev-api"
  namespace: "service-release-manager"
  labels:
    appName: "srm-dev-api"
    appNameVersion: "srm-dev-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      appNameVersion: "srm-dev-api"
  template:
    metadata:
      labels:
        appName: "srm-dev-api"
        appNameVersion: "srm-dev-api"
    spec:
      restartPolicy: Always
      containers:
        - name: "srm-dev-api"
          image: "registry.k3s.devnico.cloud/service-release-manager:latest"
          imagePullPolicy: Always
          resources: {}
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8090
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8090
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: appvolume
              mountPath: "/app/appsettings.Production.json"
              subPath: "appsettings.Production.json"
      volumes:
        - name: appvolume
          configMap:
            name: appsettings-dev
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appName: "srm-dev-api"
  name: "srm-dev-api"
  namespace: "service-release-manager"
spec:
  ports:
    - port: 8090
      protocol: TCP
      targetPort: 8090
  selector:
    appName: "srm-dev-api"
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: "srm-dev-api"
  annotations:
    kubernetes.io/ingress.class: traefik
  namespace: "service-release-manager"
spec:
  rules:
    - host: api.dev.srm.devnico.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: srm-dev-api
                port:
                  number: 8090
  tls:
    - hosts:
        - api.dev.srm.devnico.cloud
